internal/parser/formula_parser.go
// Generated from Formula.g4 by ANTLR 4.7.

package parser // Formula

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

import (
	"formula/internal/exp"
	"formula/opt"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'?'", "':'", "'||'", "'or'", "'&&'", "'and'", "'|'", "'^'", "'&'",
	"'=='", "'='", "'!='", "'<>'", "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'",
	"'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'not'", "'~'", "'('", "')'",
	"','", "'\u87FA'", "'true'", "'false'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "TRUE", "FALSE",
	"NAME", "INTEGER", "DATETIME", "VAR", "E", "FLOAT", "STRING", "WS",
}

var ruleNames = []string{
	"calc", "expr", "orExpr", "andExpr", "bitOrExpr", "bitXorExpr", "bitAndExpr",
	"eqExpr", "relExpr", "shiftExpr", "addExpr", "multExpr", "unaryExpr", "primaryExpr",
	"value", "id", "π",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type FormulaParser struct {
	*antlr.BaseParser
}

func NewFormulaParser(input antlr.TokenStream) *FormulaParser {
	this := new(FormulaParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Formula.g4"

	return this
}

// FormulaParser tokens.
const (
	FormulaParserEOF      = antlr.TokenEOF
	FormulaParserT__0     = 1
	FormulaParserT__1     = 2
	FormulaParserT__2     = 3
	FormulaParserT__3     = 4
	FormulaParserT__4     = 5
	FormulaParserT__5     = 6
	FormulaParserT__6     = 7
	FormulaParserT__7     = 8
	FormulaParserT__8     = 9
	FormulaParserT__9     = 10
	FormulaParserT__10    = 11
	FormulaParserT__11    = 12
	FormulaParserT__12    = 13
	FormulaParserT__13    = 14
	FormulaParserT__14    = 15
	FormulaParserT__15    = 16
	FormulaParserT__16    = 17
	FormulaParserT__17    = 18
	FormulaParserT__18    = 19
	FormulaParserT__19    = 20
	FormulaParserT__20    = 21
	FormulaParserT__21    = 22
	FormulaParserT__22    = 23
	FormulaParserT__23    = 24
	FormulaParserT__24    = 25
	FormulaParserT__25    = 26
	FormulaParserT__26    = 27
	FormulaParserT__27    = 28
	FormulaParserT__28    = 29
	FormulaParserT__29    = 30
	FormulaParserT__30    = 31
	FormulaParserTRUE     = 32
	FormulaParserFALSE    = 33
	FormulaParserNAME     = 34
	FormulaParserINTEGER  = 35
	FormulaParserDATETIME = 36
	FormulaParserVAR      = 37
	FormulaParserE        = 38
	FormulaParserFLOAT    = 39
	FormulaParserSTRING   = 40
	FormulaParserWS       = 41
)

// FormulaParser rules.
const (
	FormulaParserRULE_calc        = 0
	FormulaParserRULE_expr        = 1
	FormulaParserRULE_orExpr      = 2
	FormulaParserRULE_andExpr     = 3
	FormulaParserRULE_bitOrExpr   = 4
	FormulaParserRULE_bitXorExpr  = 5
	FormulaParserRULE_bitAndExpr  = 6
	FormulaParserRULE_eqExpr      = 7
	FormulaParserRULE_relExpr     = 8
	FormulaParserRULE_shiftExpr   = 9
	FormulaParserRULE_addExpr     = 10
	FormulaParserRULE_multExpr    = 11
	FormulaParserRULE_unaryExpr   = 12
	FormulaParserRULE_primaryExpr = 13
	FormulaParserRULE_value       = 14
	FormulaParserRULE_id          = 15
	FormulaParserRULE_π           = 16
)

// ICalcContext is an interface to support dynamic dispatch.
type ICalcContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Get_expr returns the _expr rule contexts.
	Get_expr() IExprContext

	// Set_expr sets the _expr rule contexts.
	Set_expr(IExprContext)

	// GetRetValue returns the retValue attribute.
	GetRetValue() *opt.LogicalExpression

	// SetRetValue sets the retValue attribute.
	SetRetValue(*opt.LogicalExpression)

	// IsCalcContext differentiates from other interfaces.
	IsCalcContext()
}

type CalcContext struct {
	*antlr.BaseParserRuleContext
	parser   antlr.Parser
	retValue *opt.LogicalExpression
	_expr    IExprContext
}

func NewEmptyCalcContext() *CalcContext {
	var p = new(CalcContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FormulaParserRULE_calc
	return p
}

func (*CalcContext) IsCalcContext() {}

func NewCalcContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CalcContext {
	var p = new(CalcContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FormulaParserRULE_calc

	return p
}

func (s *CalcContext) GetParser() antlr.Parser { return s.parser }

func (s *CalcContext) Get_expr() IExprContext { return s._expr }

func (s *CalcContext) Set_expr(v IExprContext) { s._expr = v }

func (s *CalcContext) GetRetValue() *opt.LogicalExpression { return s.retValue }

func (s *CalcContext) SetRetValue(v *opt.LogicalExpression) { s.retValue = v }

func (s *CalcContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *CalcContext) EOF() antlr.TerminalNode {
	return s.GetToken(FormulaParserEOF, 0)
}

func (s *CalcContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CalcContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CalcContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FormulaListener); ok {
		listenerT.EnterCalc(s)
	}
}

func (s *CalcContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FormulaListener); ok {
		listenerT.ExitCalc(s)
	}
}

func (p *FormulaParser) Calc() (localctx ICalcContext) {
	localctx = NewCalcContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FormulaParserRULE_calc)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)

		var _x = p.Expr()

		localctx.(*CalcContext)._expr = _x
	}
	{
		p.SetState(35)
		p.Match(FormulaParserEOF)
	}
	localctx.(*CalcContext).retValue = localctx.(*CalcContext).Get_expr().GetRetValue()

	return localctx
}

// IExprContext is an interface to support dynamic dispatch.
type IExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetFirst returns the first rule contexts.
	GetFirst() IOrExprContext

	// GetMiddle returns the middle rule contexts.
	GetMiddle() IExprContext

	// GetRight returns the right rule contexts.
	GetRight() IExprContext

	// Get_orExpr returns the _orExpr rule contexts.
	Get_orExpr() IOrExprContext

	// SetFirst sets the first rule contexts.
	SetFirst(IOrExprContext)

	// SetMiddle sets the middle rule contexts.
	SetMiddle(IExprContext)

	// SetRight sets the right rule contexts.
	SetRight(IExprContext)

	// Set_orExpr sets the _orExpr rule contexts.
	Set_orExpr(IOrExprContext)

	// GetRetValue returns the retValue attribute.
	GetRetValue() *opt.LogicalExpression

	// SetRetValue sets the retValue attribute.
	SetRetValue(*opt.LogicalExpression)

	// IsExprContext differentiates from other interfaces.
	IsExprContext()
}

type ExprContext struct {
	*antlr.BaseParserRuleContext
	parser   antlr.Parser
	retValue *opt.LogicalExpression
	first    IOrExprContext
	middle   IExprContext
	right    IExprContext
	_orExpr  IOrExprContext
}

func NewEmptyExprContext() *ExprContext {
	var p = new(ExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FormulaParserRULE_expr
	return p
}

func (*ExprContext) IsExprContext() {}

func NewExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExprContext {
	var p = new(ExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FormulaParserRULE_expr

	return p
}

func (s *ExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ExprContext) GetFirst() IOrExprContext { return s.first }

func (s *ExprContext) GetMiddle() IExprContext { return s.middle }

func (s *ExprContext) GetRight() IExprContext { return s.right }

func (s *ExprContext) Get_orExpr() IOrExprContext { return s._orExpr }

func (s *ExprContext) SetFirst(v IOrExprContext) { s.first = v }

func (s *ExprContext) SetMiddle(v IExprContext) { s.middle = v }

func (s *ExprContext) SetRight(v IExprContext) { s.right = v }

func (s *ExprContext) Set_orExpr(v IOrExprContext) { s._orExpr = v }

func (s *ExprContext) GetRetValue() *opt.LogicalExpression { return s.retValue }

func (s *ExprContext) SetRetValue(v *opt.LogicalExpression) { s.retValue = v }

func (s *ExprContext) OrExpr() IOrExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOrExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOrExprContext)
}

func (s *ExprContext) AllExpr() []IExprContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExprContext)(nil)).Elem())
	var tst = make([]IExprContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExprContext)
		}
	}

	return tst
}

func (s *ExprContext) Expr(i int) IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FormulaListener); ok {
		listenerT.EnterExpr(s)
	}
}

func (s *ExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FormulaListener); ok {
		listenerT.ExitExpr(s)
	}
}

func (p *FormulaParser) Expr() (localctx IExprContext) {
	localctx = NewExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FormulaParserRULE_expr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(38)

			var _x = p.orExpr(0)

			localctx.(*ExprContext).first = _x
		}
		{
			p.SetState(39)
			p.Match(FormulaParserT__0)
		}
		{
			p.SetState(40)

			var _x = p.Expr()

			localctx.(*ExprContext).middle = _x
		}
		{
			p.SetState(41)
			p.Match(FormulaParserT__1)
		}
		{
			p.SetState(42)

			var _x = p.Expr()

			localctx.(*ExprContext).right = _x
		}
		localctx.(*ExprContext).retValue = exp.NewTernaryExpression(localctx.(*ExprContext).GetFirst().GetRetValue(), localctx.(*ExprContext).GetMiddle().GetRetValue(), localctx.(*ExprContext).GetRight().GetRetValue())

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(45)

			var _x = p.orExpr(0)

			localctx.(*ExprContext)._orExpr = _x
		}
		localctx.(*ExprContext).retValue = localctx.(*ExprContext).Get_orExpr().GetRetValue()

	}

	return localctx
}

// IOrExprContext is an interface to support dynamic dispatch.
type IOrExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetFirst returns the first rule contexts.
	GetFirst() IOrExprContext

	// Get_andExpr returns the _andExpr rule contexts.
	Get_andExpr() IAndExprContext

	// SetFirst sets the first rule contexts.
	SetFirst(IOrExprContext)

	// Set_andExpr sets the _andExpr rule contexts.
	Set_andExpr(IAndExprContext)

	// GetRetValue returns the retValue attribute.
	GetRetValue() *opt.LogicalExpression

	// SetRetValue sets the retValue attribute.
	SetRetValue(*opt.LogicalExpression)

	// IsOrExprContext differentiates from other interfaces.
	IsOrExprContext()
}

type OrExprContext struct {
	*antlr.BaseParserRuleContext
	parser   antlr.Parser
	retValue *opt.LogicalExpression
	first    IOrExprContext
	_andExpr IAndExprContext
}

func NewEmptyOrExprContext() *OrExprContext {
	var p = new(OrExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FormulaParserRULE_orExpr
	return p
}

func (*OrExprContext) IsOrExprContext() {}

func NewOrExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OrExprContext {
	var p = new(OrExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FormulaParserRULE_orExpr

	return p
}

func (s *OrExprContext) GetParser() antlr.Parser { return s.parser }

func (s *OrExprContext) GetFirst() IOrExprContext { return s.first }

func (s *OrExprContext) Get_andExpr() IAndExprContext { return s._andExpr }

func (s *OrExprContext) SetFirst(v IOrExprContext) { s.first = v }

func (s *OrExprContext) Set_andExpr(v IAndExprContext) { s._andExpr = v }

func (s *OrExprContext) GetRetValue() *opt.LogicalExpression { return s.retValue }

func (s *OrExprContext) SetRetValue(v *opt.LogicalExpression) { s.retValue = v }

func (s *OrExprContext) AndExpr() IAndExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAndExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAndExprContext)
}

func (s *OrExprContext) OrExpr() IOrExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOrExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOrExprContext)
}

func (s *OrExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OrExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OrExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FormulaListener); ok {
		listenerT.EnterOrExpr(s)
	}
}

func (s *OrExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FormulaListener); ok {
		listenerT.ExitOrExpr(s)
	}
}

func (p *FormulaParser) OrExpr() (localctx IOrExprContext) {
	return p.orExpr(0)
}

func (p *FormulaParser) orExpr(_p int) (localctx IOrExprContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewOrExprContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IOrExprContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 4
	p.EnterRecursionRule(localctx, 4, FormulaParserRULE_orExpr, _p)
	var _la int

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)

		var _x = p.andExpr(0)

		localctx.(*OrExprContext)._andExpr = _x
	}
	localctx.(*OrExprContext).retValue = localctx.(*OrExprContext).Get_andExpr().GetRetValue()

	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			localctx = NewOrExprContext(p, _parentctx, _parentState)
			localctx.(*OrExprContext).first = _prevctx
			p.PushNewRecursionContext(localctx, _startState, FormulaParserRULE_orExpr)
			p.SetState(54)

			if !(p.Precpred(p.GetParserRuleContext(), 2)) {
				panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
			}
			p.SetState(55)
			_la = p.GetTokenStream().LA(1)

			if !(_la == FormulaParserT__2 || _la == FormulaParserT__3) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
			{
				p.SetState(56)

				var _x = p.andExpr(0)

				localctx.(*OrExprContext)._andExpr = _x
			}
			localctx.(*OrExprContext).retValue = exp.NewBinaryExpression("||", localctx.(*OrExprContext).GetFirst().GetRetValue(), localctx.(*OrExprContext).Get_andExpr().GetRetValue())

		}
		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}

	return localctx
}

// IAndExprContext is an interface to support dynamic dispatch.
type IAndExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetFirst returns the first rule contexts.
	GetFirst() IAndExprContext

	// Get_bitOrExpr returns the _bitOrExpr rule contexts.
	Get_bitOrExpr() IBitOrExprContext

	// SetFirst sets the first rule contexts.
	SetFirst(IAndExprContext)

	// Set_bitOrExpr sets the _bitOrExpr rule contexts.
	Set_bitOrExpr(IBitOrExprContext)

	// GetRetValue returns the retValue attribute.
	GetRetValue() *opt.LogicalExpression

	// SetRetValue sets the retValue attribute.
	SetRetValue(*opt.LogicalExpression)

	// IsAndExprContext differentiates from other interfaces.
	IsAndExprContext()
}

type AndExprContext struct {
	*antlr.BaseParserRuleContext
	parser     antlr.Parser
	retValue   *opt.LogicalExpression
	first      IAndExprContext
	_bitOrExpr IBitOrExprContext
}

func NewEmptyAndExprContext() *AndExprContext {
	var p = new(AndExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = FormulaParserRULE_andExpr
	return p
}

func (*AndExprContext) IsAndExprContext() {}

func NewAndExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AndExprContext {
	var p = new(AndExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = FormulaParserRULE_andExpr

	return p
}

func (s *AndExprContext) GetParser() antlr.Parser { return s.parser }

func (s *AndExprContext) GetFirst() IAndExprContext { return s.first }

func (s *AndExprContext) Get_bitOrExpr() IBitOrExprContext { return s._bitOrExpr }

func (s *AndExprContext) SetFirst(v IAndExprContext) { s.first = v }

func (s *AndExprContext) Set_bitOrExpr(v IBitOrExprContext) { s._bitOrExpr = v }

func (s *AndExprContext) GetRetValue() *opt.LogicalExpression { return s.retValue }

func (s *AndExprContext) SetRetValue(v *opt.LogicalExpression) { s.retValue = v }

func (s *AndExprContext) BitOrExpr() IBitOrExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBitOrExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBitOrExprContext)
}

func (s *AndExprContext) AndExpr() IAndExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAndExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAndExprContext)
}

func (s *AndExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AndExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AndExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FormulaListener); ok {
		listenerT.EnterAndExpr(s)
	}
}

func (s *AndExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(FormulaListener); ok {
		listenerT.ExitAndExpr(s)
	}
}

func (p *FormulaParser) AndExpr() (localctx IAndExprContext) {
	return p.andExpr(0)
}

func (p *FormulaParser) andExpr(_p int) (localctx IAndExprContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewAndExprContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IAndExprContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 6
	p.EnterRecursionRule(localctx, 6, FormulaParserRULE_andExpr, _p)
	var _la int

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(65)

		var _x = p.bitOrExpr(0)

		localctx.(*AndExprContext)._bitOrExpr = _x
	}
	localctx.(*AndExprContext).retValue = localctx.(*AndExprContext).Get_bitOrExpr().GetRetValue()

	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			localctx = NewAndExprContext(p, _parentctx, _parentState)
			localctx.(*AndExprContext).first = _prevctx
			p.PushNewRecursionContext(localctx, _startState, FormulaParserRULE_andExpr)
			p.SetState(68)

			if !(p.Precpred(p.GetParserRuleContext(), 2)) {
				panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
			}
			p.SetState(69)
			_la = p.GetTokenStream().LA(1)

			if !(_la == FormulaParserT__4 || _la == FormulaParserT__5) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
			{
				p.SetState(70)

				var _x = p.bitOrExpr(0)
